removed header from all pages and placed only on homepage, corrected autocomplete list to overflow form instead or repositioning form elements

--- a/src/components/Autocomplete/Autocomplete.scss
+++ b/src/components/Autocomplete/Autocomplete.scss
@@ -2,6 +2,8 @@
 @use '../../styles/partials/typography';
 
 .autocomplete {
+    position: relative;
+
     &__field {
         width: 100%;
         box-sizing: border-box;
