--- a/src/components/AutocompleteList/AutocompleteList.scss
+++ b/src/components/AutocompleteList/AutocompleteList.scss
@@ -4,7 +4,12 @@
 .autocomplete-list {
     list-style-type: none;
     padding: 0;
-    margin-top: -1.5rem;
+    box-sizing: border-box;
+    background-color: colors.$primary-white;
+    position: absolute;
+    top: 2.7rem;
+    left: 0;
+    width: 100%;
    
     &__list-item {
         padding: 0.5rem;
